# marketplace_api

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yaml  dump.rdb  loki-config.yaml  manage.py  nginx.conf  prometheus.yaml  promtail-config.yaml  pyproject.toml  requirements.txt
marketplace_api/: asgi.py  celery.py  my_middleware.py  settings.py  urls.py  wsgi.py
payment_product_api/: admin.py  apps.py  managers.py  models.py  serializers.py  tasks.py  urls.py  views.py
payment_product_api/migrations/: 0001_initial.py  0002_history_status_alter_history_created_at_delivery.py
payment_system_api/: admin.py  apps.py  dependencies.py  managers.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
payment_system_api/migrations/: 0001_initial.py  0002_history_status_alter_history_created_at_delivery.py  0002_initial.py  0003_initial.py  0003_rename_price_delivery_user_price_and_more.py  0004_alter_delivery_product_alter_history_product.py  0004_remove_payment_payment_id_payment_description_and_more.py  0005_payment.py
payment_system_api/services/: delivery_service.py  payment_service.py
payment_system_api/tests_payment/: test_views.py
product_control_api/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
product_control_api/migrations/: 0001_initial.py  0002_initial.py  0003_alter_productvariant_price.py  0004_alter_productvariant_quantity.py  0005_alter_product_description_and_more.py  0006_productvariant_views.py
seller_store_api/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
usercontrol_api/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
(+51 files in other folders)
